--- a/Pages/pag2.html
+++ b/Pages/pag2.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="shortcut icon" href="/imagenes/faviconperalogo.jpg" type="image/x-icon" />
-    <link rel="stylesheet" href="/css/pag2.css">
+    <link rel="stylesheet" href="./css/pag2.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.0/font/bootstrap-icons.css" />
     <link href="https://fonts.googleapis.com/css2?family=Young+Serif&display=swap" rel="stylesheet" />
     <title>MiniMarket pear</title>
