--- a/Pages/pag2.html
+++ b/Pages/pag2.html
@@ -15,7 +15,7 @@
             <nav class="nav">
                 <div class="container flexbox flexbox--centered-sides">
                     <a href="../index.html">
-                        <img src="/imagenes/Animation.gif" alt="pear" width="300" height="100" class="img" class="logo" />
+                        <img src="../imagenes/Animation.gif" alt="pear" width="300" height="100" class="img" class="logo" />
                     </a>
                     <ul class="list d-none md:d-block md:d-flex g-4xs">
                         <li>
